--- a/src/App.css
+++ b/src/App.css
@@ -166,18 +166,20 @@ html {
 }
 
 .weather > h3 {
+  background-color: #ffffff;
   padding: 1%;
   margin: 2%;
   border: 3px double #ffffff;
   width: 60%;
   text-align: center;
+  color: #004fa1;
 }
 
 .tube {
   position: relative;
   grid-area: t;
   /* font-size: 15px; */
-  top: -50px;
+  top: -48px;
   left: 50px;
   height: 120%;
   width: 610px;
@@ -271,28 +273,29 @@ html {
 
 .material-icons.check {
   color: #00ff55;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .material-icons.error {
   color: #e5ff00;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .material-icons.warning {
   color: #ff0000;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .video {
   grid-area: v;
   position: relative;
+  top: -85px;
   left: -50px;
   /* padding: 5px; */
   /* border: 1px solid #494949; */
   width: 100%;
   height: 90%;
-  margin-top: 5%;
+  /* margin-top: 5%; */
 
   animation: fadeIn ease 3s;
   -webkit-animation: fadeIn ease 3s;
@@ -431,7 +434,8 @@ html {
   text-align: center;
   color: #ffffff;
   position: relative;
-  top: 10px;
+  left: 35px;
+  top: 8px;
   grid-area: n;
   max-width: 70%;
   max-height: 65%;
@@ -632,13 +636,14 @@ html {
 
 .camera {
   position: fixed;
-
-  /* max-width: 83%; */
-  margin-left: 300px;
-  margin-top: 10px;
+  /* border: 1px solid #ff4b4b; */
+  max-width: 90%;
+  margin-left: 10px;
+  margin-top: 130px;
+  max-height: fit-content;
   /* max-height: 200px; */
   /* height: 100px; */
-  max-width: 480px;
+  /* max-width: 1100px; */
 
   z-index: 6;
 
