--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,10 @@ html {
   /* border: 1px solid #0003c7; */
   display: grid;
   grid-template-columns: 200px 1fr;
-  height: 99vh;
+  /* height: 99vh;
   max-height: 99vh;
   max-width: 99%;
-  width: 99%;
+  width: 99%; */
   /* overflow: hidden; */
   font-size: 1.8vh;
   line-height: 2vh;
@@ -168,17 +168,19 @@ html {
 
   grid-area: w;
   position: relative;
-  width: 650px;
-  left: 50px;
+  width: 130%;
+  left: 10%;
   /* border: 1px solid #242424; */
-  padding: 5px;
-  margin-top: -60px;
+  padding: 1%;
+  margin-top: -12%;
   animation: fadeIn ease 2s;
   -webkit-animation: fadeIn ease 2s;
   -moz-animation: fadeIn ease 2s;
   -o-animation: fadeIn ease 2s;
   -ms-animation: fadeIn ease 2s;
 }
+
+
 
 .weather > h3 {
   background-color: #ffffff;
@@ -194,12 +196,12 @@ html {
   position: relative;
   grid-area: t;
   /* font-size: 15px; */
-  top: -48px;
-  left: 50px;
+  margin-top: -11.5%;
+  left: 10%;
   height: 120%;
-  width: 610px;
+  width: 160%;
   /* border: 1px solid #242424; */
-  padding: 4px;
+  padding: 1%;
   /* perspective: 1000px; */
   /* background-color: transparent; */
 
@@ -216,6 +218,7 @@ html {
 .tflLogo {
   position: relative;
   left: 40%;
+  height: 100%;
 }
 
 .tflback {
@@ -288,28 +291,28 @@ html {
 
 .material-icons.check {
   color: #00ff55;
-  font-size: 16px;
+  font-size: 110%;
 }
 
 .material-icons.error {
   color: #e5ff00;
-  font-size: 16px;
+  font-size: 110%;
 }
 
 .material-icons.warning {
   color: #ff0000;
-  font-size: 16px;
+  font-size: 110%;
 }
 
 .video {
   grid-area: v;
   position: relative;
-  top: -85px;
-  left: -50px;
+  margin-top: -10%;
+  margin-left: -10%;
   /* padding: 5px; */
   /* border: 1px solid #494949; */
   width: 100%;
-  height: 90%;
+  height: 100%;
   /* margin-top: 5%; */
 
   animation: fadeIn ease 3s;
@@ -322,7 +325,7 @@ html {
 .videoFull {
   position: absolute;
   /* border: 1px solid #494949; */
-
+  
   max-width: 83%;
   margin-top: 0.5%;
   margin-left: 0.8%;
@@ -366,11 +369,11 @@ html {
 .calendar {
   grid-area: c;
   position: relative;
-  top: 10px;
-  left: -30px;
-  width: fit-content;
-  height: fit-content;
-  /* overflow: hidden; */
+  margin-left: 1%;
+  margin-top: 18%;
+  width: 100%;
+  height: 90%;
+  overflow: hidden;
 
   /* border: 1px solid #242424; */
   /* padding: 5px; */
@@ -449,11 +452,14 @@ html {
   text-align: center;
   color: #ffffff;
   position: relative;
-  left: 35px;
-  top: 8px;
+  margin-left: 10%;
+  margin-top: 15%;
+  /* top: 10%; */
   grid-area: n;
-  max-width: 70%;
-  max-height: 65%;
+  height: 50%;
+  width: 70%;
+  /* max-width: 50%;
+  max-height: 40%; */
   animation: fadeIn ease 3s;
 
   font-size: 1.56vh;
@@ -468,8 +474,10 @@ html {
 }
 
 .news > img {
+  width: 100%;
+  height: 70%;
   max-width: 100%;
-  max-height: 80%;
+  max-height: 70%;
 }
 
 .newsfullin {
